--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ node_js:
 install:
   - npm install -g esy@0.1.23
 script:
-  - esyi
+  - esyi --solve-timeout 60
   - esy build
   - esy which ocaml
 cache:
