--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ os:
   - osx
 node_js:
   - "8"
+before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo apt-get install -y zlib1g-dev libgmp-dev; fi
 install:
-  - npm install -g esy@0.1.24
+  - npm install -g esy@0.1.25
 script:
   - esyi --solve-timeout 60
   - esy build
