--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ os:
 node_js:
   - "8"
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo apt-get install -y zlib1g-dev libgmp-dev; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y zlib1g-dev libgmp-dev; fi
 install:
   - npm install -g esy@0.1.25
 script:
