--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y zlib1g-dev libgmp-dev; fi
 install:
   - npm install -g esy@0.1.25
+  - npm install
 script:
   - node test.js
 cache:
