--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ node_js:
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y zlib1g-dev libgmp-dev; fi
 install:
-  - npm install -g esy@preview
+  - npm install -g esy@0.1.28
   - npm install
 script:
   - node test.js
